--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ hr {
 </div>
 
 <script>
-var year = new Date();document.write(year.getFullYear());
-document.getElementById("year").innerHTML = year;
+var year = new Date();
+document.getElementById("year").innerHTML = year.getFullYear();
 var countDownDate = new Date("feb 28, 2021 00:00:00").getTime();
 var countdownfunction = setInterval(function() {
   var now = new Date().getTime();
